--- a/Workshop 1 - Athens/Adv3_MultipleTests.Rmd
+++ b/Workshop 1 - Athens/Adv3_MultipleTests.Rmd
@@ -57,7 +57,7 @@ Teachers:
 
 ## Recap
 
-- JAGS / runjags is the wasy way to work with complex models
+- JAGS / runjags is the easy way to work with complex models
   * But we *still have to* check convergence and effective sample size!
 
 - Estimating sensitivity and specificity is like pulling a rabbit out of a hat
@@ -69,7 +69,7 @@ Teachers:
 
 - But what if the tests are not independent of each other?
 
-# Session 3a:  Hui-Walter models for multiple tests with conditional indepdendence
+# Session 3a:  Hui-Walter models for multiple conditionally independent tests
 
 ## What exactly is our latent class?
 
@@ -148,8 +148,8 @@ auto_huiwalter(simdata[,c('Population','Test1','Test2','Test3')], outfile='auto3
 ---
 
 ```{r, echo=FALSE, comment=''}
-tc <- readLines('auto3thw.bug')[c(8,9,11,12,17,19:22,54:57,59)]
-cat(tc[1:4],'', '\t. . . ', '', tc[5:9],'', '\t\t. . . ', '', tc[10:14], sep='\n')
+tc <- gsub('\t','',readLines('auto3thw.bug')[c(8,9,11,19:22,54:57,59)])
+cat(tc[1:3],'', tc[4:7],'', '. . . ', '', tc[8:12], sep='\n')
 ```
 
 
@@ -166,7 +166,7 @@ glmhw_definition <- c("model{
     Status[i] ~ dcat(prob[i, ])
     prob[1:8,i] <- se_prob[1:8,i] + sp_prob[1:8,i]
 ", "
-    se_prob[1,p] <- truestatus[i] * ((1-se[1])*(1-se[2])*(1-se[3]))
+		se_prob[1,p] <- truestatus[i] * ((1-se[1])*(1-se[2])*(1-se[3]))
 		sp_prob[1,p] <- (1-truestatus[i]) * (sp[1]*sp[2]*sp[3])
 
 		se_prob[2,p] <- truestatus[i] * (se[1]*(1-se[2])*(1-se[3])
@@ -177,6 +177,7 @@ glmhw_definition <- c("model{
 
 		se_prob[4,p] <- truestatus[i] * (se[1]*se[2]*(1-se[3]))
 		sp_prob[4,p] <- (1-truestatus[i]) * ((1-sp[1])*(1-sp[2])*sp[3])
+
 		se_prob[5,p] <- truestatus[i] * ((1-se[1])*(1-se[2])*se[3])
 		sp_prob[5,p] <- (1-truestatus[i]) * (sp[1]*sp[2]*(1-sp[3]))
 
@@ -221,6 +222,12 @@ cat(glmhw_definition[2], sep='\n')
 
 ---
 
+```{r comment='', echo=FALSE}
+cat(glmhw_definition[3], sep='\n')
+```
+
+---
+
 But this is inefficient
 
 There is also no way to distinguish individuals within the same boxes
@@ -229,7 +236,8 @@ We could also use the estimated se/sp/prev to post-calculate these status probab
 
 This is useful for post-hoc ROC
 
-## Exercise
+
+## Exercise {.fragile}
 
 Simulate data from 3 tests and analyse using the autohuiwalter function
 
@@ -240,7 +248,14 @@ Make some data missing for one or more tests and re-generate the model
   * Can you see what has changed in the code?
 
 
-## Optional Exercise
+`r if(params$presentation) {"\\begin{comment}"}`
+
+## Solution {.fragile}
+
+
+`r if(params$presentation) {"\\end{comment}"}`
+
+## Optional Exercise {.fragile}
 
 Simulate data from 3 antibody tests with ab positive step [give code in solution]
 
@@ -249,9 +264,13 @@ Does the se/sp estimated by a model recover the parameters?
 Why not?
 
 
-```{r}
 
-library('tidyverse')
+`r if(params$presentation) {"\\begin{comment}"}`
+
+## Optional Solution {.fragile}
+
+
+```{r}
 
 ## Parameters
 
@@ -298,6 +317,8 @@ sp_elisa
 
 iters <- 10^6
 
+library('tidyverse')
+
 simdata <- data.frame(TrueStatus = rbinom(iters, 1, prev)) %>%
 	mutate(AntibodyStatus = rbinom(iters, 1, TrueStatus*se_antibody + (1-TrueStatus)*(1-sp_antibody))) %>%
 	mutate(TargetStatus = rbinom(iters, 1, AntibodyStatus*se_target + (1-AntibodyStatus)*(1-sp_target))) %>%
@@ -315,6 +336,7 @@ table(simdata$ELISA1, simdata$WesternBlot)
 ## Look at results:
 
 # The individual test-level Se and Sp are as expected:
+
 simdata %>%
 	group_by(TrueStatus) %>%
 	mutate(Total = n()) %>%
@@ -344,6 +366,7 @@ simdata %>%
 # But note that the overall sensitivity/specificity is sensitive to all 8 of the se/sp parameters at the top!
 ```
 
+`r if(params$presentation) {"\\end{comment}"}`
 
 
 # Session 3b:  Hui-Walter models for multiple tests with conditional depdendence
@@ -362,12 +385,9 @@ It helps to consider the data simulation as a biological process.
 ```{r}
 # Parameter values to simulate:
 N <- 200
-se1 <- 0.8
-se2 <- 0.9
-se3 <- 0.95
-sp1 <- 0.95
-sp2 <- 0.99
-sp3 <- 0.95
+se1 <- 0.8; sp1 <- 0.95
+se2 <- 0.9; sp2 <- 0.99
+se3 <- 0.95; sp3 <- 0.95
 
 Populations <- 2
 prevalence <- c(0.25,0.75)
@@ -376,57 +396,59 @@ Group <- rep(1:Populations, each=N)
 # Ensure replicable data:
 set.seed(2017-11-21)
 
-# We will assume test 1 is dependent of the others, but tests 2&3
-# are not independent (e.g. they are both antibody tests)
-# The probability of an antibody response given disease positive:
+# The probability of an antibody response given disease:
 abse <- 0.8
-# (One minus) the probability of an antibody response given disease negative:
+# The probability of no antibody response given no disease:
 absp <- 1 - 0.2
+```
 
-# Simulate the true latent state (which is unobserved in real life):
+---
+
+```{r}
+# Simulate the true latent state:
 true <- rbinom(N*Populations, 1, prevalence[Group])
 # Simulate test results for test 1:
 test1 <- rbinom(N*Populations, 1, se1*true + (1-sp1)*(1-true))
-# Tests 2&3 will be non-independent, so simulate another biological step 
-# e.g. antibody response:
+# Tests 2 & 3 will be co-dependent on antibody response:
 antibody <- rbinom(N*Populations, 1, abse*true + (1-absp)*(1-true))
-# Simulate test 2&3 results based on this other latent state:
+# Simulate test 2 & 3 results based on this other latent state:
 test2 <- rbinom(N*Populations, 1, se2*antibody + (1-sp2)*(1-antibody))
 test3 <- rbinom(N*Populations, 1, se3*antibody + (1-sp3)*(1-antibody))
 
 ind3tests <- data.frame(Population=Group, Test1=test1, Test2=test2, Test3=test3)
+```
 
-# The overall sensitivity of the correlated tests is effectively this:
+---
+
+```{r}
+# The overall sensitivity of the correlated tests is:
 abse*se2 + (1-abse)*(1-sp2)
 abse*se3 + (1-abse)*(1-sp3)
 
-# The overall specificity of the correlated tests is effectively this:
+# The overall specificity of the correlated tests is:
 absp*sp2 + (1-absp)*(1-se2)
 absp*sp3 + (1-absp)*(1-se3)
-
 ```
 
-## Verifying simulation results
+. . .
+
+We need to think carefully about what we are conditioning on when interpreting sensitivity and specificity!
 
 ## Model specification
 
 ```{r, eval=FALSE}
 
-		# Probability of observing ELISA1- ELISA2- WesternBlot- from a true positive::
-		se_prob[1,p] <- prev[p] * ((1-se[1])*(1-se[2])*(1-se[3]) +covse12 +covse13 +covse23)
-		# Probability of observing ELISA1- ELISA2- WesternBlot- from a true negative::
-		sp_prob[1,p] <- (1-prev[p]) * (sp[1]*sp[2]*sp[3] +covsp12 +covsp13 +covsp23)
+	se_prob[1,p] <- prev[p] * ((1-se[1])*(1-se[2])*(1-se[3]) +covse12 +covse13 +covse23)
+	sp_prob[1,p] <- (1-prev[p]) * (sp[1]*sp[2]*sp[3] +covsp12 +covsp13 +covsp23)
 
-		# Probability of observing ELISA1+ ELISA2- WesternBlot- from a true positive::
-		se_prob[2,p] <- prev[p] * (se[1]*(1-se[2])*(1-se[3]) -covse12 -covse13 +covse23)
-		# Probability of observing ELISA1+ ELISA2- WesternBlot- from a true negative::
-		sp_prob[2,p] <- (1-prev[p]) * ((1-sp[1])*sp[2]*sp[3] -covsp12 -covsp13 +covsp23)
+	se_prob[2,p] <- prev[p] * (se[1]*(1-se[2])*(1-se[3]) -covse12 -covse13 +covse23)
+	sp_prob[2,p] <- (1-prev[p]) * ((1-sp[1])*sp[2]*sp[3] -covsp12 -covsp13 +covsp23)
 
-		...
+	...
 		
-	# Covariance in sensitivity between ELISA1 and ELISA2 tests:
+	# Covariance in sensitivity between tests 1 and 2:
 	covse12 ~ dunif( (se[1]-1)*(1-se[2]) , min(se[1],se[2]) - se[1]*se[2] )
-	# Covariance in specificity between ELISA1 and ELISA2 tests:
+	# Covariance in specificity between tests 1 and 2:
 	covsp12 ~ dunif( (sp[1]-1)*(1-sp[2]) , min(sp[1],sp[2]) - sp[1]*sp[2] )
 	
 	...
@@ -436,167 +458,106 @@ absp*sp3 + (1-absp)*(1-se3)
 
 ## Generating the model
 
-Extreme care needed
-
 Use autohuiwalter with argument covon=TRUE
 
-```{r}
+```{r, results='hide'}
 source('autohuiwalter.R')
 auto_huiwalter(ind3tests, 'auto3tihw.bug', covon=TRUE)
 ```
 
 ```{r, echo=FALSE, comment=''}
-cat(readLines('auto3tihw.bug'), sep='\n')
+cat(gsub('\t','',readLines('auto3tihw.bug')[87:92]), sep='\n')
+```
+
+---
+
+```{r, echo=FALSE, comment=''}
+cat(gsub('\t','',readLines('auto3tihw.bug')[94:106]), sep='\n')
 ```
 
 
-## Exercise
+## Exercise {.fragile}
 
 Simulate data with a dependence between 2 tests
 
 Model assuming conditional independence biases the estimates
 
+Turn on covariance between the two tests
+
 Model with conditional depdendence has bigger CI but unbiased
+
+
+`r if(params$presentation) {"\\begin{comment}"}`
+
+## Solution {.fragile}
+
+
+`r if(params$presentation) {"\\end{comment}"}`
+
+## Optional Exercise {.fragile}
+
+Activate covariance between all 3 tests
+
+`r if(params$presentation) {"\\begin{comment}"}`
+
+## Optional Solution {.fragile}
+
+
+`r if(params$presentation) {"\\end{comment}"}`
 
 
 # Session 3c:  Model selection
 
 ## Motivation
 
-[Planning for this session to be a general discussion between all instructors and students, as I am not entirely sure what to recommend in terms of model selection - except that I dislike DIC!!!]
+- Choosing between candidate models
+  * DIC
+  * Bayes Factors
+  * BIC
+  * WAIC
 
-## Background to DIC
+. . .
 
-[Some theory slides stolen from ABME course:  ABME_Model selection.pptx]
+- Assessing model adequacy:
+  * Verify using a simulation study
+  * Posterior predictive p-values
+  * Comparison of results from different models eg:
+      * Independence vs covariance
+      * Different priors
 
-DIC works fine for hierarchical normal models but not others
+. . .
 
+Others?  Discussion!
 
-## Other methods
+## DIC and WAIC
 
-Bayes factors work well if you can count them
+- DIC
+  * Works well for hierarchical normal models
+  * To calculate:
+    * Add dic and ped to the monitors in runjags
+    * But don't trust the results for these types of models
 
-WAIC works better for a wide range of models
-	
-	* An approximation to LOO with general applicability
-	* Probably won't work for Hui-Walter though due to lack of independent data
-	* Could be useful if using the GLM version (untested!)
+- WAIC
+  * Approximation to LOO
+  * Needs independent likelihoods
+    * Could work for individual-level models?
+  * Currently a pain to calculate
+    * See WAIC.R in the GitHub directory
+    * And/or wait for updates to runjags (and particularly JAGS 5)
 
-Models tend to be sensitive to priors
+. . .
 
-Simulating data and testing that your model recovers the parameters is a good idea
-
-## Calculating DIC
-
-Add dic and ped to the monitors in runjags
-
-But don't trust the results
-
-Also bear in mind you can't parallelise
-
-## Calculating WAIC
-
-Currently a pain 
-
-```{r}
-## This is an example of extracting WAIC from runjags/jags objects
-# Matt Denwood, 2019-11-11
-# Note that this will all get much easier with the release of JAGS 5 and the next verison of runjags!!
-
-## A function to return the WAIC
-# Also returns the effective number of parameters (p_waic), elpd and lpd as described by:
-# www.stat.columbia.edu/~gelman/research/unpublished/waic_stan.pdf
-# Note:  	mean_lik is the log of the (exponentiated) likelihoods
-#			var_log_lik is the variance of the log likelihoods
-#			these need separate monitors in JAGS
-get_waic <- function(mean_lik, var_log_lik){
-	
-	stopifnot(length(mean_lik)==length(var_log_lik))
-	stopifnot(all(mean_lik > 0))
-	N <- length(mean_lik)
-	
-	lpd <- log(mean_lik)
-	elpd <- lpd - var_log_lik
-	waic <- -2 * elpd
-	se <- (var(waic) / N)^0.5
-	
-	return(list(waic=-2*sum(elpd), p_waic=sum(var_log_lik), elpd=sum(elpd), lpd=sum(lpd), se_waic=se, pointwise=cbind(waic=waic, elpd=elpd, lpd=lpd)))
-}
-
-
-## An example based on Andrew Gelman's 8 schools data, to match that used in the Vehtari and Gelman (2014) paper
-
-# Data as used by Gelman:
-schools <-
-structure(list(school = structure(1:8, .Label = c("A", "B", "C",
-"D", "E", "F", "G", "H"), class = "factor"), estimate = c(28L,
-8L, -3L, 7L, -1L, 1L, 18L, 12L), sd = c(15L, 10L, 16L, 11L, 9L,
-11L, 10L, 18L)), .Names = c("school", "estimate", "sd"), class = "data.frame", row.names = c(NA,
--8L))
-
-# Model definition:
-model <- "
-model {
-	for (j in 1:J){  						# J = the number of schools 
-		y[j] ~ dnorm (theta[j], tau.y[j])	# data model: the likelihood
-		theta[j] <- mu.theta + eta[j]
-		tau.y[j] <- pow(sigma.y[j], -2)
-		
-		# These are required to monitor the variance of the log likelihood:
-		log_lik[j] <- logdensity.norm(y[j], theta[j], tau.y[j])
-		# And the mean of the likelihood:
-		lik[j] <- exp(log_lik[j])
-	}
-	for (j in 1:J){
-		eta[j] ~ dnorm (0, tau.theta)
-	}
-	tau.theta <- pow(sigma.theta, -2)
-	sigma.theta ~ dhalfcauchy(prior.scale)  # The dhalfcauchy distribution is also implemented in runjags
-	mu.theta ~ dnorm (0.0, 1.0E-6)			# noninformative prior on mu
-	#data# J, y, sigma.y, prior.scale
-	#monitor# theta, mu.theta, sigma.theta
-}"
-
-
-## Run the model:
-library('runjags')
-library('rjags')
-
-# Calculate the data:
-J <- nrow(schools)
-y <- schools$estimate
-sigma.y <- schools$sd
-prior.scale <- 25
-
-# Initial run for main parameter monitoring:
-results <- run.jags(model, sample=10000)
-# Second run for WAIC monitors:
-ll <- jags.samples(as.jags(results), c('lik', 'log_lik'), type=c('mean','variance'), 10000)
-# Calculate the WAIC statistic and effective parameters etc:
-get_waic(as.mcmc(ll$mean$lik)[,1], as.mcmc(ll$variance$log_lik)[,1])
-
+```{r, eval=FALSE}
+install.packages('runjags', repos=c("https://ku-awdc.github.io/drat/", "https://cran.rstudio.com/"))
 ```
 
-## Future Updates
-
-Model criticism will get better in JAGS 5, and the next update of runjags
-
-Installing development version of runjags:
-
-```{r}
-# Put on drat server and supply code here
-```
-
-WAIC is also calculable from Stan models (easily?)
 
 ## Discussion and free practical time
 
-What would be useful to add to the autohuiwalter function?
-
-  * Modify so it allows Se/Sp priors to be defined as matrices?
-  * And correlations on/off as matrices?
+Any questions?
 
 ```{r cleanup, include=FALSE}
+unlink('glm_hw3t.bug')
 unlink('auto3thw.bug')
 unlink('auto3tihw.bug')
 ```
